# Fieldgrade

./: .dockerignore  .env.dev.example  .env.example  .env.production.example  .gitattributes  .gitignore  AGENTS.md  ARCH_MAP.md  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  DATA_HANDLING.md  DEPLOYMENT_TOPOLOGY.md  Dockerfile  INSTALL.md  MIGRATION_PLAN_A.md  MIGRATION_PLAN_B.md  MIGRATION_PLAN_C.md  MIGRATION_PLAN_D.md  Makefile  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.9.0-alpha.md  SECURITY.md  TERMUX.md  WINDOWS.md  compose.dev.yaml  compose.production.yaml  compose.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_demo.ps1  run_demo.sh  run_fieldpack_demo.sh  run_ui.ps1  run_ui_termux.sh  run_worker.ps1
fieldgrade_ui/: __main__.py  agent_gateway.py  app.py  config.py  contracts.py  doctor.py  execution_ledger.py  governance.py  internal_pipeline.py  jobs.py  pipeline.py  pyproject.toml  requirements.txt  runtime_init.py  storage.py  watcher.py  worker.py
fieldgrade_ui/static/: app.js  index.html  styles.css
fieldgrade_ui/tests/: test_agent_gateway.py  test_architecture_endpoints.py  test_contracts.py  test_execution_ledger.py  test_governance_endpoints.py  test_proposal_readiness_scripts.py  test_releases_endpoints.py  test_remotes_sync_endpoints.py  test_runtime_init.py  test_tenant_isolation_artifacts.py  test_tenant_isolation_jobs.py  test_worker_status_endpoint.py
mite_ecology/: pyproject.toml  requirements.txt
mite_ecology/configs/: ecology.yaml
mite_ecology/mite_ecology/: accept.py  auto.py  bundle_accept.py  cli.py  clutchscore.py  components.py  config.py  contracts.py  db.py  delta.py  export.py  gat.py  gnn.py  graph_delta.py  hashutil.py  kg.py  kg_shacl_lite.py  llm_sync.py  memoga.py  motif.py  registry.py  release.py  remote_sync.py  replay.py  run_context.py  specs.py
mite_ecology/registry/: components.yaml  components_v1.yaml  remotes_v1.yaml  variants.yaml  variants_v1.yaml
mite_ecology/sql/: schema.sql
mite_ecology/tests/: test_a4_killtests_termite_bundle.py  test_a5_ui_pipeline_library_runner.py  test_autorun_determinism.py  test_cli_parser.py  test_gnn_gat_deterministic.py  test_graph_delta_ledger.py  test_kg_shacl_lite.py  test_release_build_deterministic.py  test_specs_validators.py  (+2 more)
termite_fieldpack/: Makefile  __init__.py  pyproject.toml  requirements.txt
(+193 files in other folders)
