[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fieldgrade-ui"
version = "0.9.0"
description = "Fieldgrade UI/API for Termite Fieldpack + mite_ecology."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.23.0",
  "python-multipart>=0.0.9"
]

[project.scripts]
fieldgrade-ui = "fieldgrade_ui.__main__:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
